force-app/main/default/objects/Deal_Desk_Case__c/Deal_Desk_Case__c.object-meta.xml
<CustomObject>
    <description>SOX object - Custom Object</description>
    <label>Deal Desk Case</label>
    <nameField>
        <displayFormat>DDC-{000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Desk Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>