force-app/main/default/objects/Deal_Desk_Case__c/fields/Account_Executive_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_ID__c</fullName>
    <formula>Opportunity__r.Account.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Executive ID</label>
    <type>Text</type>
</CustomField>