force-app/main/default/objects/Deal_Desk_Case__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Desk Cases</relationshipLabel>
    <relationshipName>Deal_Desk_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>