force-app/main/default/objects/Deal_Desk_Case__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <description>[SAL26-481 - to provide additional notes on the case]</description>
    <label>Additional Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>