force-app/main/default/objects/Deal_Desk_Case__c/fields/Adhoc_Approval_Requested__c.field-meta.xml
<CustomField>
    <fullName>Adhoc_Approval_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adhoc Approval Requested</label>
    <type>Checkbox</type>
</CustomField>