force-app/main/default/objects/Deal_Desk_Case__c/fields/Amount_ACV__c.field-meta.xml
<CustomField>
    <fullName>Amount_ACV__c</fullName>
    <label>Amount (ACV)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>