force-app/main/default/objects/Deal_Desk_Case__c/fields/Amount_Conditional__c.field-meta.xml
<CustomField>
    <fullName>Amount_Conditional__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>