force-app/main/default/objects/Deal_Desk_Case__c/fields/Amount_TCV__c.field-meta.xml
<CustomField>
    <fullName>Amount_TCV__c</fullName>
    <label>Amount (TCV)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>