force-app/main/default/objects/Deal_Desk_Case__c/fields/ApprovalsArchived__c.field-meta.xml
<CustomField>
    <fullName>ApprovalsArchived__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ApprovalsArchived</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>