force-app/main/default/objects/Deal_Desk_Case__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>In Queue</fullName>
                <isActive>false</isActive>
                <label>In Queue</label>
            </value>
            <value>
                <fullName>Requested</fullName>
                <isActive>false</isActive>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Revoked</fullName>
                <isActive>false</isActive>
                <label>Revoked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>