force-app/main/default/objects/Deal_Desk_Case__c/fields/Business_Justification__c.field-meta.xml
<CustomField>
    <fullName>Business_Justification__c</fullName>
    <label>What Do You Need Help With?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>