force-app/main/default/objects/Deal_Desk_Case__c/fields/Business_Justification_Questions__c.field-meta.xml
<CustomField>
    <fullName>Business_Justification_Questions__c</fullName>
    <description>Template questions displayed on based on Request Types</description>
    <label>Required Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>