force-app/main/default/objects/Deal_Desk_Case__c/fields/Case_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Case_Additional_Comments__c</fullName>
    <label>Case Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>