force-app/main/default/objects/Deal_Desk_Case__c/fields/Case_Auto_Created__c.field-meta.xml
<CustomField>
    <fullName>Case_Auto_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to identify whether Deal Desk case is created automatically or manually.</description>
    <label>Case Auto Created ?</label>
    <type>Checkbox</type>
</CustomField>