force-app/main/default/objects/Deal_Desk_Case__c/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <description>Case status to be manually updated by reps</description>
    <label>Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Waiting on Requestor</fullName>
            </value>
            <value>
                <fullName>Waiting on Other</fullName>
            </value>
            <value>
                <fullName>Pending CPQ/IT Ticket</fullName>
            </value>
            <value>
                <fullName>New comment</fullName>
            </value>
            <value>
                <fullName>Waiting on Deal Structuring Approval</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Waiting on Revenue</fullName>
            </value>
            <value>
                <fullName>Waiting on Renewals</fullName>
            </value>
            <value>
                <fullName>Waiting on Legal</fullName>
            </value>
            <value>
                <fullName>Request for Information</fullName>
            </value>
            <value>
                <fullName>Waiting on CSAT Approval</fullName>
            </value>
            <value>
                <fullName>Waiting on Manager Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>