force-app/main/default/objects/Deal_Desk_Case__c/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <description>Subject for Deal Desk case</description>
    <label>Case Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>