force-app/main/default/objects/Deal_Desk_Case__c/fields/Deal_Desk_Tagging__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Tagging__c</fullName>
    <description>[SAL26-481 - repurpose Request Sub-Type and make required for case closure (Sales will no longer need to fill this out during case creation, Deal Desk will be responsible for correctly tagging cases before being able to close the case)]</description>
    <label>Deal Desk Tagging</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add-On Node</fullName>
            </value>
            <value>
                <fullName>Best Practices Enablement</fullName>
            </value>
            <value>
                <fullName>CPQ Bug</fullName>
            </value>
            <value>
                <fullName>CSAT</fullName>
            </value>
            <value>
                <fullName>Custom Deal Structure</fullName>
            </value>
            <value>
                <fullName>Deal Ops Exception</fullName>
            </value>
            <value>
                <fullName>Downgrade Request</fullName>
            </value>
            <value>
                <fullName>Error Message</fullName>
            </value>
            <value>
                <fullName>Expiration Date Change</fullName>
            </value>
            <value>
                <fullName>Flip quote</fullName>
            </value>
            <value>
                <fullName>SW/HW Only Quoting</fullName>
            </value>
            <value>
                <fullName>Limited Availability</fullName>
            </value>
            <value>
                <fullName>Manual Fulfillment Quoting</fullName>
            </value>
            <value>
                <fullName>Marketplace Quoting</fullName>
            </value>
            <value>
                <fullName>Non-standard Billing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partial Renewal</fullName>
            </value>
            <value>
                <fullName>Promo Discount</fullName>
            </value>
            <value>
                <fullName>Quote Approval</fullName>
            </value>
            <value>
                <fullName>Quote Doc Issue</fullName>
            </value>
            <value>
                <fullName>Ramped Deal</fullName>
            </value>
            <value>
                <fullName>Remove Lines Request</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>RSC-G</fullName>
            </value>
            <value>
                <fullName>RSC-P</fullName>
            </value>
            <value>
                <fullName>Scale Quoting</fullName>
            </value>
            <value>
                <fullName>SKU Not Converting to V2</fullName>
            </value>
            <value>
                <fullName>Subsumed ACV</fullName>
            </value>
            <value>
                <fullName>Third Party Hardware</fullName>
            </value>
            <value>
                <fullName>Trade Up Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>