force-app/main/default/objects/Deal_Desk_Case__c/fields/Deal_Desk_Team__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Team__c</fullName>
    <inlineHelpText>Select Deal Structuring if you need help with discounting, quote approvals, structuring or pricing.

Select Deal Operations for help with system errors, quoting bugs or enablement.</inlineHelpText>
    <label>Deal Desk Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deal Structuring</fullName>
            </value>
            <value>
                <fullName>Deal Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>