force-app/main/default/objects/Deal_Desk_Case__c/fields/Deal_Structuring_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deal_Structuring_Notes__c</fullName>
    <label>Deal Structuring Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>