force-app/main/default/objects/Deal_Desk_Case__c/fields/ETM_Area__c.field-meta.xml
<CustomField>
    <fullName>ETM_Area__c</fullName>
    <label>ETM (Area)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>