force-app/main/default/objects/Deal_Desk_Case__c/fields/ETM_Region__c.field-meta.xml
<CustomField>
    <fullName>ETM_Region__c</fullName>
    <label>ETM (Region)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>