force-app/main/default/objects/Deal_Desk_Case__c/fields/ETM_Theatre__c.field-meta.xml
<CustomField>
    <fullName>ETM_Theatre__c</fullName>
    <label>ETM (Theatre)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>