force-app/main/default/objects/Deal_Desk_Case__c/fields/In_Forecast_GVP__c.field-meta.xml
<CustomField>
    <fullName>In_Forecast_GVP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Forecast (GVP)</label>
    <type>Checkbox</type>
</CustomField>