force-app/main/default/objects/Deal_Desk_Case__c/fields/Internal_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Approval_Notes__c</fullName>
    <label>Internal Approval Notes</label>
    <type>TextArea</type>
</CustomField>