force-app/main/default/objects/Deal_Desk_Case__c/fields/Is_DDC_User__c.field-meta.xml
<CustomField>
    <fullName>Is_DDC_User__c</fullName>
    <description>Boolean field to check whether logged in user is DDC user or not. (DD25-9)</description>
    <formula>$Permission.Deal_Desk_Ticketing_User_Permission</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is DDC User</label>
    <type>Checkbox</type>
</CustomField>