force-app/main/default/objects/Deal_Desk_Case__c/fields/Level_Of_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Level_Of_Approval_Required__c</fullName>
    <formula>If(ISPICKVAL(Deal_Desk_Team__c, &apos;Deal Structuring&apos;),
&apos;Deal Structuring&apos;,
&apos;Deal Operations&apos;)</formula>
    <label>Level Of Approval Required</label>
    <type>Text</type>
</CustomField>