force-app/main/default/objects/Deal_Desk_Case__c/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <description>Record Type of related opportunity</description>
    <label>Opportunity Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>