force-app/main/default/objects/Deal_Desk_Case__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>Stage of the related Opportunity</description>
    <label>Opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>