force-app/main/default/objects/Deal_Desk_Case__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName</formula>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>