force-app/main/default/objects/Deal_Desk_Case__c/fields/Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Deal Desk Cases</relationshipLabel>
    <relationshipName>Deal_Desk_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>