force-app/main/default/objects/Deal_Desk_Case__c/fields/Primary_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote_Status__c</fullName>
    <formula>Opportunity__r.Primary_Quote_Approval_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Quote Status</label>
    <type>Text</type>
</CustomField>