force-app/main/default/objects/Deal_Desk_Case__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field for linking Quote to Deal Desk Case</description>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Deal Desk Cases</relationshipLabel>
    <relationshipName>Deal_Desk_Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>