force-app/main/default/objects/Deal_Desk_Case__c/fields/Request_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Sub_Type__c</fullName>
    <label>Request Sub-Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Year: FED/SLED</fullName>
            </value>
            <value>
                <fullName>Add-On Node</fullName>
            </value>
            <value>
                <fullName>Approval Issues</fullName>
            </value>
            <value>
                <fullName>ASPEN</fullName>
            </value>
            <value>
                <fullName>Below Minimum Amount (Deal or Product)</fullName>
            </value>
            <value>
                <fullName>Below Minimum Term</fullName>
            </value>
            <value>
                <fullName>Best Practices Enablement</fullName>
            </value>
            <value>
                <fullName>Cohesity Take Out</fullName>
            </value>
            <value>
                <fullName>Complete Quoting</fullName>
            </value>
            <value>
                <fullName>CPQ Bug</fullName>
            </value>
            <value>
                <fullName>CSAT</fullName>
            </value>
            <value>
                <fullName>Custom Deal Structure</fullName>
            </value>
            <value>
                <fullName>Custom Legal Verbiage</fullName>
            </value>
            <value>
                <fullName>Deal Ops Exception</fullName>
            </value>
            <value>
                <fullName>Delayed Start Date</fullName>
            </value>
            <value>
                <fullName>Discount Beyond Hard Floor</fullName>
            </value>
            <value>
                <fullName>Downgrade Request</fullName>
            </value>
            <value>
                <fullName>E1000</fullName>
            </value>
            <value>
                <fullName>E1000’s Request</fullName>
            </value>
            <value>
                <fullName>Entitlement Transfer</fullName>
            </value>
            <value>
                <fullName>Error Message</fullName>
            </value>
            <value>
                <fullName>Expiration Date Change</fullName>
            </value>
            <value>
                <fullName>Expiration Date Update</fullName>
            </value>
            <value>
                <fullName>Extended Payment Terms</fullName>
            </value>
            <value>
                <fullName>Financial Stability Letter</fullName>
            </value>
            <value>
                <fullName>Flip quote</fullName>
            </value>
            <value>
                <fullName>HW Only Quoting</fullName>
            </value>
            <value>
                <fullName>License Transfer</fullName>
            </value>
            <value>
                <fullName>Limited Availability</fullName>
            </value>
            <value>
                <fullName>M365 Beachhead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>