force-app/main/default/objects/Deal_Desk_Case__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Deal_Desk_Team__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deal Ops Exception</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>Legal Language</fullName>
            </value>
            <value>
                <fullName>Minimum or Maximum Discount, Floor, or Term Exceptions</fullName>
            </value>
            <value>
                <fullName>Non-Standard Payments</fullName>
            </value>
            <value>
                <fullName>Non-Standard Programs / Deal Structures</fullName>
            </value>
            <value>
                <fullName>Quoting Bug</fullName>
            </value>
            <value>
                <fullName>Renewal Quote</fullName>
            </value>
            <value>
                <fullName>Exception Quoting</fullName>
                <isActive>false</isActive>
                <label>Exception Quoting</label>
            </value>
            <value>
                <fullName>GTM Program Exceptions</fullName>
                <isActive>false</isActive>
                <label>GTM Program Exceptions</label>
            </value>
            <value>
                <fullName>Product Usage Exceptions</fullName>
                <isActive>false</isActive>
                <label>Product Usage Exceptions</label>
            </value>
            <value>
                <fullName>Term, Floor, Deal Size Threshold</fullName>
                <isActive>false</isActive>
                <label>Term, Floor, Deal Size Threshold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>