force-app/main/default/objects/Deal_Desk_Case__c/fields/Secondary_owner__c.field-meta.xml
<CustomField>
    <fullName>Secondary_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field has been created as per DD25-109</description>
    <label>Secondary owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Desk_Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>