force-app/main/default/objects/Deal_Desk_Case__c/fields/SubmittedUser__c.field-meta.xml
<CustomField>
    <fullName>SubmittedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Desk_Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>