force-app/main/default/objects/Deal_Desk_Case__c/fields/Summary_of_Approval__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Approval__c</fullName>
    <description>[SAL26-481 required for case closure]</description>
    <label>Summary of Approval</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>