force-app/main/default/objects/Deal_Desk_Case__c/fields/Tagging_Context__c.field-meta.xml
<CustomField>
    <fullName>Tagging_Context__c</fullName>
    <description>[SAL26-481] -Required only if &quot;Other&quot; sub-type is selected</description>
    <inlineHelpText>Required only if &quot;Other&quot; sub-type is selected</inlineHelpText>
    <label>Tagging Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>