force-app/main/default/objects/Deal_Desk_Case__c/fields/Tertiary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field has been created as per DD25-109 request</description>
    <label>Tertiary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Desk_Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>