force-app/main/default/objects/Deal_Desk_Case__c/fields/Time_To_First_Response__c.field-meta.xml
<CustomField>
    <fullName>Time_To_First_Response__c</fullName>
    <description>[SAL26-481 - To capture the first response time in hrs after the case is created]</description>
    <label>Time To First Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>