force-app/main/default/objects/Deal_Desk_Case__c/fields/Urgent__c.field-meta.xml
<CustomField>
    <fullName>Urgent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deal Desk Case urgency indicator</description>
    <label>Urgent</label>
    <type>Checkbox</type>
</CustomField>