force-app/main/default/objects/Deal_Desk_Case__c/recordTypes/Deal_Desk_Case.recordType-meta.xml
<RecordType>
    <fullName>Deal_Desk_Case</fullName>
    <active>true</active>
    <label>Deal Desk Case</label>
</RecordType>