force-app/main/default/objects/Deal_Desk_Case__c/validationRules/Business_Justification_Char_length.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Justification_Char_length</fullName>
    <active>true</active>
    <description>Business Justification must be atleast 10 character long</description>
    <errorConditionFormula>LEN( Business_Justification__c ) &lt;10</errorConditionFormula>
    <errorDisplayField>Business_Justification__c</errorDisplayField>
    <errorMessage>Business Justification must be minimum 10 characters</errorMessage>
</ValidationRule>