force-app/main/default/objects/Deal_Desk_Case__c/validationRules/Cant_update_status_of_a_Closed_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_update_status_of_a_Closed_Case</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(Request_Status__c) &amp;&amp; !(ISPICKVAL(Request_Status__c,&apos;Draft&apos;) &amp;&amp; ISPICKVAL(ApprovalStatus__c,&apos;&apos;)) &amp;&amp; OR(ISPICKVAL(PRIORVALUE(Request_Status__c),&quot;Closed - Incomplete&quot;),
ISPICKVAL(PRIORVALUE(Request_Status__c),&quot;Closed - Completed&quot;))</errorConditionFormula>
    <errorDisplayField>Request_Status__c</errorDisplayField>
    <errorMessage>You can&apos;t update status of a Closed case. Click ReOpen button above if you want to reopen the case.</errorMessage>
</ValidationRule>