force-app/main/default/objects/Deal_Desk_Case__c/validationRules/Closed_Completed_Condition.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Completed_Condition</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISCHANGED(Request_Status__c),
ISPICKVAL(Request_Status__c, &apos;Closed - Completed&apos;),
!ISPICKVAL(PRIORVALUE(Request_Status__c),&quot;Approved&quot;), !ISPICKVAL(PRIORVALUE(Request_Status__c),&quot;Rejected&quot;),
!ISPICKVAL(PRIORVALUE(Request_Status__c),&quot;Conditionally Approved&quot;))</errorConditionFormula>
    <errorDisplayField>Request_Status__c</errorDisplayField>
    <errorMessage>Only an Approved or Rejected case can be marked as Closed - Completed</errorMessage>
</ValidationRule>