force-app/main/default/objects/Deal_Desk_Case__c/validationRules/Comments_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Comments_Required</fullName>
    <active>false</active>
    <description>Comments are required if Other is selected in Request Sub-Type</description>
    <errorConditionFormula>INCLUDES(Request_Sub_Type__c, &apos;Other&apos;) &amp;&amp;  OR(ISBLANK(Comments__c), ISNULL(Comments__c) )</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Comments are required if &apos;Other&apos; value is selected in Request Sub-Type</errorMessage>
</ValidationRule>