force-app/main/default/objects/Deal_Desk_Case__c/validationRules/Do_not_Approve_directly.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_Approve_directly</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED(Request_Status__c) &amp;&amp; ISPICKVAL(Request_Status__c,&apos;Approved&apos;) &amp;&amp; !ISPICKVAL(ApprovalStatus__c,&apos;Approved&apos;)</errorConditionFormula>
    <errorDisplayField>Request_Status__c</errorDisplayField>
    <errorMessage>You can&apos;t Approve the case directly from here. Click ReOpen button above if you want to reopen the case.</errorMessage>
</ValidationRule>